Stabilize actuator security test and simplify exception logs